2004-10-08  Matthias Clasen  <mclasen@redhat.com>

	* glib/gmain.c (g_child_watch_add_full): 
	* glib/gmain.c (g_child_watch_add): Document that GLib supports only
	a single callback per pid. (#154828, Gustavo Carneiro)

2004-10-06  Matthias Clasen  <mclasen@redhat.com>

	* glib/gfileutils.c: Fix some C99isms.  (#154676, Kjartan Maraas)

2004-10-05  Anders Carlsson  <andersca@gnome.org>

	* glib/goption.c: (g_option_context_parse):
	Add check for if argc is 0.
	
	* tests/option-test.c: (empty_test3), (main):
	Add test case.
	
2004-10-05  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Update

2004-10-04  Matthias Clasen  <mclasen@redhat.com>

	* glib/gmem.c (g_mem_set_vtable): Only set vtable_set if the
	vtable is set.  (#154352, Philippe Blain)

2004-10-03  Anders Carlsson  <andersca@gnome.org>

	* glib/goption.c: (parse_arg):
	Set arg_data on filenames. (Discovered by Mats-Ola Persson).
	
	* tests/option-test.c: (arg_test3), (ignore_test3), (main):
	Add test for filename args.
	
2004-10-01  Tor Lillqvist  <tml@iki.fi>

	* glib/goption.c (g_option_context_parse): Use
	g_path_get_basename() instead of strrchr(), so that either slash
	is accepted on Windows.

2004-09-30  Matthias Clasen  <mclasen@redhat.com>

	* glib/gfileutils.c: Convert filenames to UTF-8 before 
	putting them in GErrors.  (#154078, Morten Welinder)

2004-09-29  Matthias Clasen  <mclasen@redhat.com>

	* glib/glib.symbols: Add g_assert_warning.

	* glib/gmessages.h:
	* glib/gmessages.c (g_assert_warning): Treat g_assert 
	in the same way as g_return_if_fail and move the string 
	constants into a helper function, which also takes 
	care of removing the "IA__" prefix from internal aliases.

	* glib/gmessages.h: Move the declaration of 
	g_return_if_fail_warning() out of the ifdefs, so that
	building with G_DISABLE_ASSERT works.

2004-09-27  Murray Cumming  <murrayc@murrayc.com>

	* glib/goptions.[h|c], glib/glib.symbols: Rename 
	g_context_option_error_quark() to g_option_error_quark(), because that 