@@ -1,3 +1,8 @@
+2004-10-17  Matthias Clasen  <mclasen@redhat.com>
+
+	* glib/gutils.h (G_IS_DIR_SEPARATOR): 
+	* glib/gutils.c: Make public.  (#155589, Tim-Philipp Müller) 
+
 2004-10-08  Matthias Clasen  <mclasen@redhat.com>
 
 	* glib/gmain.c (g_child_watch_add_full): 
