@@ -122,6 +122,7 @@ G_OS_UNIX
 <SUBSECTION>
 G_DIR_SEPARATOR
 G_DIR_SEPARATOR_S
+G_IS_DIR_SEPARATOR
 G_SEARCHPATH_SEPARATOR
 G_SEARCHPATH_SEPARATOR_S
 
