@@ -1,3 +1,8 @@
+2004-10-17  Matthias Clasen  <mclasen@redhat.com>
+
+	* glib/tmpl/macros.sgml: 
+	* glib/glib-sections.txt: Document G_IS_DIR_SEPARATOR. 
+
 2004-10-05  Matthias Clasen  <mclasen@redhat.com>
 
 	* gobject/tmpl/objects.sgml: Improve the docs for
